# backend-mashup

./: docker-compose.yml  readme.md
cpp-pistache/: CMakeLists.txt  Dockerfile  main.cpp
go-fiber/: Dockerfile  go.mod
go-fiber/cmd/: main.go  routes.go
go-fiber/database/: database.go
go-fiber/handlers/: users.go
go-fiber/models/: models.go
haskell-scotty/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  package.yaml
haskell-scotty/app/: Main.hs
haskell-scotty/src/: Lib.hs
java-spring/: Dockerfile  build.gradle
java-spring/src/main/java/com/xneme/backendmashup/javaspring/: JavaSpringApplication.java  User.java  UserController.java
java-spring/src/main/resources/: application.properties
java-spring/src/test/java/com/xneme/backendmashup/javaspring/: JavaSpringApplicationTests.java
node-js/: Dockerfile  package-lock.json  package.json
node-js/src/: queries.js  server.js
python-flask/services/web/: manage.py
python-flask/services/web/project/: __init__.py
rust/: Cargo.toml  Dockerfile  sqlx-data.json
rust-poem/: Cargo.toml  Dockerfile
rust-poem/.sqlx/: query-54df568d0da42b537ac55c0544670244c6d34ed7fdb71f65123b045bdd4415f8.json
rust-poem/src/: main.rs
rust/.sqlx/: query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-7f8180b71331d2b03816f5354f02c11e0bd21683db0d04c78b6e552e190871d3.json
rust/migrations/: 20230721222458_users.up.sql
