[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1", features = ["macros"] }
hyper = { version = "0.14", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "offline"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dotenvy = "0.15"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
